fix code wrapping to avoid side scrolling

--- a/themes/organic/assets/css/site.css
+++ b/themes/organic/assets/css/site.css
@@ -95,7 +95,7 @@ content pre {
 }
 
 content > p > code {
-  @apply bg-gray-200 rounded;
+  @apply bg-gray-200 whitespace-normal rounded;
   padding: 0 .2em;
 }
 
